Update yarn.lock; fix text overflow

--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -81,8 +81,7 @@
 .translation-input, .translated-text {
   box-sizing: border-box;
   font-size: 16px;
-  overflow-y: hidden;
-  overflow-x: auto;
+  overflow: auto;
   padding: 0.5em 2em 2em 0.5em;
   height: 148px;
   width: 100%;
